# gtdownloader

./: .gitignore  README.md  TweetDownloader.py  TweetGeoGenerator.py  __init__.py  downloader.py  geomethods.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  utils.py
.github/workflows/: tests.yaml
docs/: credentials.md  download.md  index.md  reference.md  requirements.txt
docs/sections/: about.md  credentials.md  download.md  export.md  reference.md  start.md
docs/source/api/: downloading.rst
gtdownloader/: __init__.py  apicall.py  downloader.py  geomethods.py
gtdownloader/_utils/: utils.py
paper/: paper.bib  paper.md
tests/: __init__.py  conftests.py  test_download.py  test_geomethods.py  test_outputs.py  test_parameters.csv
tgdownloader/: __init__.py  downloader.py
